Allow setting LAS file data from external DataFrame
Also involved re-jigging the integral read() function workings. Now
everything works directly from the LASFile.data 2D ndarray
to unwrapped.ipynb
spreadsheet.ipynb
notebooks/issues/test_df_curve_addition_on_export.ipynb
LAS file.ipynb

--- a/notebooks/converting a LAS file to an Excel spreadsheet.ipynb
+++ b/notebooks/converting a LAS file to an Excel spreadsheet.ipynb
@@ -543,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "finally you can take a look at some screenshots of the Excel file itself:\n",
+    "finally take a look at some screenshots of the Excel file itself:\n",
     "\n",
     "![](example.xlsx-Header.png)\n",
     "\n",
@@ -577,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
