--- a/notebooks/issues/sample_write_sect_widths_12.ipynb
+++ b/notebooks/issues/sample_write_sect_widths_12.ipynb
@@ -27,10 +27,10 @@
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=SRVC, unit=, value=The company that did this logging has a very very long name...., descr=SERVICE, original_mnemonic=SRVC)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=DATE, unit=, value=25-DEC-1988, descr=LOG DATE, original_mnemonic=DATE)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=UWI, unit=, value=100091604920W300, descr=WELL ID, original_mnemonic=UWI)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=D, unit=M, value=, descr=1  DEPTH, original_mnemonic=D)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=A, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=A)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=B, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=B)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=C, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=C)\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=D, unit=M, value=, descr=1  DEPTH, original_mnemonic=D, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=A, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=A, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=B, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=B, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=C, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=C, data.shape=())\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=BHT, unit=DEGC, value=35.5, descr=BOTTOM HOLE TEMPERATURE, original_mnemonic=BHT)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=BS, unit=MM, value=200.0, descr=BIT SIZE, original_mnemonic=BS)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=FD, unit=K/M3, value=1000.0, descr=FLUID DENSITY, original_mnemonic=FD)\n",
@@ -38,7 +38,7 @@
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=MDEN, unit=, value=2710.0, descr=LOGGING MATRIX DENSITY, original_mnemonic=MDEN)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=RMF, unit=OHMM, value=0.216, descr=MUD FILTRATE RESISTIVITY, original_mnemonic=RMF)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=DFD, unit=K/M3, value=1525.0, descr=DRILL FLUID DENSITY, original_mnemonic=DFD)\n",
-      "INFO:lasio.las:Reader.read_data LAS file shape = (3, 8)\n",
+      "INFO:lasio.las:Reader.read_data LAS file shape = (3L, 8L)\n",
       "DEBUG:lasio.las:Reader.read_data checking for nulls (NULL = -999.25)\n",
       "DEBUG:lasio.las:SectionItems.__setitem__ Replaced VERS item\n",
       "DEBUG:lasio.las:LASFile.write Version section\n",
@@ -100,13 +100,21 @@
       "DEBUG:lasio.las:LASFile.write HeaderItem(mnemonic=UWI, unit=, value=100091604920W300, descr=WELL ID, original_mnemonic=UWI)\n",
       "order=descr:value section_widths={'left_width': 7, 'middle_width': 9}\n",
       "DEBUG:lasio.las:LASFile.write Curves section\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=D, unit=M, value=, descr=1  DEPTH, original_mnemonic=D)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=D, unit=M, value=, descr=1  DEPTH, original_mnemonic=D, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=A, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=A)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=A, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=A, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=B, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=B)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=B, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=B, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=C, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=C)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=C, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=C, data.shape=(3L,))\n",
+      "\torder=value:descr rhs_element=value\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=UNKNOWN, unit=, value=, descr=, original_mnemonic=, data.shape=(3L,))\n",
+      "\torder=value:descr rhs_element=value\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=UNKNOWN, unit=, value=, descr=, original_mnemonic=, data.shape=(3L,))\n",
+      "\torder=value:descr rhs_element=value\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=UNKNOWN, unit=, value=, descr=, original_mnemonic=, data.shape=(3L,))\n",
+      "\torder=value:descr rhs_element=value\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=UNKNOWN, unit=, value=, descr=, original_mnemonic=, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
       "DEBUG:lasio.las:get_section_widths HeaderItem(mnemonic=BHT, unit=DEGC, value=35.5, descr=BOTTOM HOLE TEMPERATURE, original_mnemonic=BHT)\n",
       "\torder=value:descr rhs_element=value\n",
@@ -149,6 +157,10 @@
       "A.US/M  : 2  SONIC TRANSIT TIME\n",
       "B.K/M3  : 3  BULK DENSITY\n",
       "C.V/V   : 4   NEUTRON POROSITY\n",
+      " .      : \n",
+      " .      : \n",
+      " .      : \n",
+      " .      : \n",
       "~Params ----------------------------------------------------\n",
       "BHT .DEGC   35.5 : BOTTOM HOLE TEMPERATURE\n",
       "BS  .MM    200.0 : BIT SIZE\n",
@@ -161,9 +173,9 @@
       "Note: The logging tools became stuck at 625 meters causing the data\n",
       "between 625 meters and 615 meters to be invalid.\n",
       "~ASCII -----------------------------------------------------\n",
-      "       1670     123.45       2550       0.45\n",
-      "     1669.9     123.45       2550       0.45\n",
-      "     1669.8     123.45       2550       0.45\n",
+      "       1670     123.45       2550       0.45     123.45     123.45      110.2      105.6\n",
+      "     1669.9     123.45       2550       0.45     123.45     123.45      110.2      105.6\n",
+      "     1669.8     123.45       2550       0.45     123.45     123.45      110.2      105.6\n",
       "\n"
      ]
     }
@@ -243,6 +255,15 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -261,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
