--- a/notebooks/issues/test_df_curve_addition_on_export.ipynb
+++ b/notebooks/issues/test_df_curve_addition_on_export.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
    "outputs": [
     {
@@ -27,14 +26,14 @@
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=SRVC, unit=, value=ANY LOGGING COMPANY LTD., descr=SERVICE COMPANY, original_mnemonic=SRVC)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=DATE, unit=, value=25-DEC-1988, descr=LOG DATE, original_mnemonic=DATE)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=UWI, unit=, value=100091604920W300, descr=UNIQUE WELL ID, original_mnemonic=UWI)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=DEPT, unit=M, value=, descr=1  DEPTH, original_mnemonic=DEPT)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=DT, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=DT)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=RHOB, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=RHOB)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=NPHI, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=NPHI)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=SFLU, unit=OHMM, value=, descr=5  RXO RESISTIVITY, original_mnemonic=SFLU)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=SFLA, unit=OHMM, value=, descr=6  SHALLOW RESISTIVITY, original_mnemonic=SFLA)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=ILM, unit=OHMM, value=, descr=7  MEDIUM RESISTIVITY, original_mnemonic=ILM)\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=ILD, unit=OHMM, value=, descr=8  DEEP RESISTIVITY, original_mnemonic=ILD)\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=DEPT, unit=M, value=, descr=1  DEPTH, original_mnemonic=DEPT, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=DT, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=DT, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=RHOB, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=RHOB, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=NPHI, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=NPHI, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=SFLU, unit=OHMM, value=, descr=5  RXO RESISTIVITY, original_mnemonic=SFLU, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=SFLA, unit=OHMM, value=, descr=6  SHALLOW RESISTIVITY, original_mnemonic=SFLA, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=ILM, unit=OHMM, value=, descr=7  MEDIUM RESISTIVITY, original_mnemonic=ILM, data.shape=())\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=ILD, unit=OHMM, value=, descr=8  DEEP RESISTIVITY, original_mnemonic=ILD, data.shape=())\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=BHT, unit=DEGC, value=35.5, descr=BOTTOM HOLE TEMPERATURE, original_mnemonic=BHT)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=BS, unit=MM, value=200.0, descr=BIT SIZE, original_mnemonic=BS)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=FD, unit=K/M3, value=1000.0, descr=FLUID DENSITY, original_mnemonic=FD)\n",
@@ -42,11 +41,87 @@
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=MDEN, unit=, value=2710.0, descr=LOGGING MATRIX DENSITY, original_mnemonic=MDEN)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=RMF, unit=OHMM, value=0.216, descr=MUD FILTRATE RESISTIVITY, original_mnemonic=RMF)\n",
       "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.HeaderItem'> str=HeaderItem(mnemonic=DFD, unit=K/M3, value=1525.0, descr=DRILL FLUID DENSITY, original_mnemonic=DFD)\n",
-      "INFO:lasio.las:Reader.read_data LAS file shape = (3, 8)\n",
-      "DEBUG:lasio.las:Reader.read_data checking for nulls (NULL = -999.25)\n",
+      "INFO:lasio.las:Reader.read_data LAS file shape = (3L, 8L)\n",
+      "DEBUG:lasio.las:Reader.read_data checking for nulls (NULL = -999.25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "logging.getLogger().setLevel(level=logging.DEBUG)\n",
+    "import lasio\n",
+    "import StringIO\n",
+    "l = lasio.read(r'D:\\personal\\code\\lasio\\tests\\examples\\sample.las')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3L, 8L)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.67000000e+03,   1.23450000e+02,   2.55000000e+03,\n",
+       "          4.50000000e-01,   1.23450000e+02,   1.23450000e+02,\n",
+       "          1.10200000e+02,   1.05600000e+02],\n",
+       "       [  1.66987500e+03,   1.23450000e+02,   2.55000000e+03,\n",
+       "          4.50000000e-01,   1.23450000e+02,   1.23450000e+02,\n",
+       "          1.10200000e+02,   1.05600000e+02],\n",
+       "       [  1.66975000e+03,   1.23450000e+02,   2.55000000e+03,\n",
+       "          4.50000000e-01,   1.23450000e+02,   1.23450000e+02,\n",
+       "          1.10200000e+02,   1.05600000e+02]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:lasio.las:columns=['DEPT', 'DT', 'RHOB', 'NPHI', 'SFLU', 'SFLA', 'ILM', 'ILD', 'ILD_COND']\n",
+      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=ILD_COND, unit=, value=, descr=, original_mnemonic=ILD_COND, data.shape=())\n",
       "DEBUG:lasio.las:SectionItems.__setitem__ Replaced WRAP item\n",
       "DEBUG:lasio.las:SectionItems.__setitem__ Replaced VERS item\n",
-      "DEBUG:lasio.las:SectionItems.append type=<class 'lasio.las.CurveItem'> str=CurveItem(mnemonic=ILD_COND, unit=, value=, descr=, original_mnemonic=ILD_COND)\n",
       "DEBUG:lasio.las:LASFile.write Version section\n",
       "DEBUG:lasio.las:get_section_widths HeaderItem(mnemonic=VERS, unit=, value=2.0, descr=CWLS log ASCII Standard -VERSION 2.0, original_mnemonic=VERS)\n",
       "\torder=value:descr rhs_element=value\n",
@@ -106,23 +181,23 @@
       "DEBUG:lasio.las:LASFile.write HeaderItem(mnemonic=UWI, unit=, value=100091604920W300, descr=UNIQUE WELL ID, original_mnemonic=UWI)\n",
       "order=value:descr section_widths={'left_width': 4, 'middle_width': 25}\n",
       "DEBUG:lasio.las:LASFile.write Curves section\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=DEPT, unit=M, value=, descr=1  DEPTH, original_mnemonic=DEPT)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=DEPT, unit=M, value=, descr=1  DEPTH, original_mnemonic=DEPT, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=DT, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=DT)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=DT, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=DT, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=RHOB, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=RHOB)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=RHOB, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=RHOB, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=NPHI, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=NPHI)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=NPHI, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=NPHI, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=SFLU, unit=OHMM, value=, descr=5  RXO RESISTIVITY, original_mnemonic=SFLU)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=SFLU, unit=OHMM, value=, descr=5  RXO RESISTIVITY, original_mnemonic=SFLU, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=SFLA, unit=OHMM, value=, descr=6  SHALLOW RESISTIVITY, original_mnemonic=SFLA)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=SFLA, unit=OHMM, value=, descr=6  SHALLOW RESISTIVITY, original_mnemonic=SFLA, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=ILM, unit=OHMM, value=, descr=7  MEDIUM RESISTIVITY, original_mnemonic=ILM)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=ILM, unit=OHMM, value=, descr=7  MEDIUM RESISTIVITY, original_mnemonic=ILM, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=ILD, unit=OHMM, value=, descr=8  DEEP RESISTIVITY, original_mnemonic=ILD)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=ILD, unit=OHMM, value=, descr=8  DEEP RESISTIVITY, original_mnemonic=ILD, data.shape=(3L,))\n",
       "\torder=value:descr rhs_element=value\n",
-      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=ILD_COND, unit=, value=, descr=, original_mnemonic=ILD_COND)\n",
+      "DEBUG:lasio.las:get_section_widths CurveItem(mnemonic=ILD_COND, unit=, value=, descr=, original_mnemonic=ILD_COND, data.shape=())\n",
       "\torder=value:descr rhs_element=value\n",
       "DEBUG:lasio.las:get_section_widths HeaderItem(mnemonic=BHT, unit=DEGC, value=35.5, descr=BOTTOM HOLE TEMPERATURE, original_mnemonic=BHT)\n",
       "\torder=value:descr rhs_element=value\n",
@@ -190,12 +265,9 @@
     }
    ],
    "source": [
-    "import logging\n",
-    "logging.getLogger().setLevel(level=logging.DEBUG)\n",
-    "import lasio\n",
-    "import StringIO\n",
-    "l = lasio.read(r'D:\\personal\\code\\lasio\\tests\\examples\\sample.las')\n",
-    "l.df[\"ILD_COND\"] = 1000 / l.df.ILD\n",
+    "df = l.df()\n",
+    "df[\"ILD_COND\"] = 1000 / df.ILD\n",
+    "l.set_data_from_df(df, match_shape=False)\n",
     "s = StringIO.StringIO()\n",
     "l.write(s, version=2, wrap=False, fmt=\"%.5f\")\n",
     "s.seek(0); print s.read()"
@@ -203,7 +275,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[CurveItem(mnemonic=DEPT, unit=M, value=, descr=1  DEPTH, original_mnemonic=DEPT, data.shape=(3L,)),\n",
+       " CurveItem(mnemonic=DT, unit=US/M, value=, descr=2  SONIC TRANSIT TIME, original_mnemonic=DT, data.shape=(3L,)),\n",
+       " CurveItem(mnemonic=RHOB, unit=K/M3, value=, descr=3  BULK DENSITY, original_mnemonic=RHOB, data.shape=(3L,)),\n",
+       " CurveItem(mnemonic=NPHI, unit=V/V, value=, descr=4   NEUTRON POROSITY, original_mnemonic=NPHI, data.shape=(3L,)),\n",
+       " CurveItem(mnemonic=SFLU, unit=OHMM, value=, descr=5  RXO RESISTIVITY, original_mnemonic=SFLU, data.shape=(3L,)),\n",
+       " CurveItem(mnemonic=SFLA, unit=OHMM, value=, descr=6  SHALLOW RESISTIVITY, original_mnemonic=SFLA, data.shape=(3L,)),\n",
+       " CurveItem(mnemonic=ILM, unit=OHMM, value=, descr=7  MEDIUM RESISTIVITY, original_mnemonic=ILM, data.shape=(3L,)),\n",
+       " CurveItem(mnemonic=ILD, unit=OHMM, value=, descr=8  DEEP RESISTIVITY, original_mnemonic=ILD, data.shape=(3L,)),\n",
+       " CurveItem(mnemonic=ILD_COND, unit=, value=, descr=, original_mnemonic=ILD_COND, data.shape=())]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.curves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DEPT'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3L, 9L)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3L, 8L)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.values.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.67000000e+03,   1.23450000e+02,   2.55000000e+03,\n",
+       "          4.50000000e-01,   1.23450000e+02,   1.23450000e+02,\n",
+       "          1.10200000e+02,   1.05600000e+02,   9.46969697e+00],\n",
+       "       [  1.66987500e+03,   1.23450000e+02,   2.55000000e+03,\n",
+       "          4.50000000e-01,   1.23450000e+02,   1.23450000e+02,\n",
+       "          1.10200000e+02,   1.05600000e+02,   9.46969697e+00],\n",
+       "       [  1.66975000e+03,   1.23450000e+02,   2.55000000e+03,\n",
+       "          4.50000000e-01,   1.23450000e+02,   1.23450000e+02,\n",
+       "          1.10200000e+02,   1.05600000e+02,   9.46969697e+00]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -216,17 +414,17 @@
        " HeaderItem(mnemonic=STOP, unit=M, value=1669.75, descr=, original_mnemonic=STOP),\n",
        " HeaderItem(mnemonic=STEP, unit=M, value=-0.125, descr=, original_mnemonic=STEP),\n",
        " HeaderItem(mnemonic=NULL, unit=, value=-999.25, descr=, original_mnemonic=NULL),\n",
-       " HeaderItem(mnemonic=COMPANY, unit=, value=# ANY OIL COMPANY LTD., descr=COMPANY, original_mnemonic=COMPANY),\n",
+       " HeaderItem(mnemonic=COMP, unit=, value=# ANY OIL COMPANY LTD., descr=COMPANY, original_mnemonic=COMP),\n",
        " HeaderItem(mnemonic=WELL, unit=, value=ANY ET AL OIL WELL #12, descr=WELL, original_mnemonic=WELL),\n",
        " HeaderItem(mnemonic=FLD, unit=, value=EDAM, descr=FIELD, original_mnemonic=FLD),\n",
        " HeaderItem(mnemonic=LOC, unit=, value=A9-16-49-20W3M, descr=LOCATION, original_mnemonic=LOC),\n",
        " HeaderItem(mnemonic=PROV, unit=, value=SASKATCHEWAN, descr=PROVINCE, original_mnemonic=PROV),\n",
-       " HeaderItem(mnemonic=SRVC, unit=, value=The company that did this logging has a very very long name...., descr=SERVICE, original_mnemonic=SRVC),\n",
+       " HeaderItem(mnemonic=SRVC, unit=, value=ANY LOGGING COMPANY LTD., descr=SERVICE COMPANY, original_mnemonic=SRVC),\n",
        " HeaderItem(mnemonic=DATE, unit=, value=25-DEC-1988, descr=LOG DATE, original_mnemonic=DATE),\n",
-       " HeaderItem(mnemonic=UWI, unit=, value=100091604920W300, descr=WELL ID, original_mnemonic=UWI)]"
+       " HeaderItem(mnemonic=UWI, unit=, value=100091604920W300, descr=UNIQUE WELL ID, original_mnemonic=UWI)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -245,10 +443,10 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "15"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
