--- a/notebooks/converting LAS file with wrapped data to unwrapped.ipynb
+++ b/notebooks/converting LAS file with wrapped data to unwrapped.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -152,95 +152,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HeaderItem(mnemonic='WRAP', unit='', value='YES', descr='Multiple lines per depth step')\n",
+      "HeaderItem(mnemonic=WRAP, unit=, value=YES, descr=Multiple lines per depth step, original_mnemonic=WRAP)\n",
       "\n",
       "Line 0:~Version ---------------------------------------------------\n",
-      "Line 1:VERS.     2.0 : CWLS log ASCII Standard -VERSION 2.0\n",
-      "Line 2:WRAP.     YES : Multiple lines per depth step\n",
+      "Line 1:VERS. 2.0 : CWLS log ASCII Standard -VERSION 2.0\n",
+      "Line 2:WRAP. YES : Multiple lines per depth step\n",
       "Line 3:~Well ------------------------------------------------------\n",
-      "Line 4:STRT.M                       910.0 : \n",
-      "Line 5:STOP.M                       909.5 : \n",
-      "Line 6:STEP.M                      -0.125 : \n",
-      "Line 7:NULL.                      -999.25 : Null value\n",
-      "Line 8:COMP.         ANY OIL COMPANY INC. : COMPANY\n",
-      "Line 9:WELL.        ANY ET AL XX-XX-XX-XX : WELL\n",
-      "Line 10:FLD .                      WILDCAT : FIELD\n",
-      "Line 11:LOC .               XX-XX-XX-XXW3M : LOCATION\n",
-      "Line 12:PROV.                 SASKATCHEWAN : PROVINCE\n",
-      "Line 13:SRVC.     ANY LOGGING COMPANY INC. : SERVICE COMPANY\n",
-      "Line 14:SON .                       142085 : SERVICE ORDER\n",
-      "Line 15:DATE.                    13-DEC-86 : LOG DATE\n",
-      "Line 16:UWI .                              : UNIQUE WELL ID\n",
+      "Line 4:STRT.M                   910.0 : \n",
+      "Line 5:STOP.M                   909.5 : \n",
+      "Line 6:STEP.M                  -0.125 : \n",
+      "Line 7:NULL.                  -999.25 : Null value\n",
+      "Line 8:COMP.     ANY OIL COMPANY INC. : COMPANY\n",
+      "Line 9:WELL.    ANY ET AL XX-XX-XX-XX : WELL\n",
+      "Line 10:FLD .                  WILDCAT : FIELD\n",
+      "Line 11:LOC .           XX-XX-XX-XXW3M : LOCATION\n",
+      "Line 12:PROV.             SASKATCHEWAN : PROVINCE\n",
+      "Line 13:SRVC. ANY LOGGING COMPANY INC. : SERVICE COMPANY\n",
+      "Line 14:SON .                   142085 : SERVICE ORDER\n",
+      "Line 15:DATE.                13-DEC-86 : LOG DATE\n",
+      "Line 16:UWI .                          : UNIQUE WELL ID\n",
       "Line 17:~Curves ----------------------------------------------------\n",
-      "Line 18:DEPT.M         : Depth\n",
-      "Line 19:DT  .US/M      : 1 Sonic Travel Time\n",
-      "Line 20:RHOB.K/M       : 2 Density-Bulk Density\n",
-      "Line 21:NPHI.V/V       : 3 Porosity -Neutron\n",
-      "Line 22:RX0 .OHMM      : 4 Resistivity -Rxo\n",
-      "Line 23:RESS.OHMM      : 5 Resistivity -Shallow\n",
-      "Line 24:RESM.OHMM      : 6 Resistivity -Medium\n",
-      "Line 25:RESD.OHMM      : 7 Resistivity -Deep\n",
-      "Line 26:SP  .MV        : 8 Spon. Potential\n",
-      "Line 27:GR  .GAPI      : 9 Gamma Ray\n",
-      "Line 28:CALI.MM        : 10 Caliper\n",
-      "Line 29:DRHO.K/M3      : 11 Delta-Rho\n",
-      "Line 30:EATT.DBM       : 12 EPT Attenuation\n",
-      "Line 31:TPL .NS/M      : 13 TP -EPT\n",
-      "Line 32:PEF .          : 14 PhotoElectric Factor\n",
-      "Line 33:FFI .V/V       : 15 Porosity -NML FFI\n",
-      "Line 34:DCAL.MM        : 16 Caliper-Differential\n",
-      "Line 35:RHGF.K/M3      : 17 Density-Formation\n",
-      "Line 36:RHGA.K/M3      : 18 Density-Apparent\n",
-      "Line 37:SPBL.MV        : 19 Baselined SP\n",
-      "Line 38:GRC .GAPI      : 20 Gamma Ray BHC\n",
-      "Line 39:PHIA.V/V       : 21 Porosity -Apparent\n",
-      "Line 40:PHID.V/V       : 22 Porosity -Density\n",
-      "Line 41:PHIE.V/V       : 23 Porosity -Effective\n",
-      "Line 42:PHIN.V/V       : 24 Porosity -Neut BHC\n",
-      "Line 43:PHIC.V/V       : 25 Porosity -Total HCC\n",
-      "Line 44:R0  .OHMM      : 26 Ro\n",
-      "Line 45:RWA .OHMM      : 27 Rfa\n",
-      "Line 46:SW  .          : 28 Sw -Effective\n",
-      "Line 47:MSI .          : 29 Sh Idx -Min\n",
-      "Line 48:BVW .          : 30 BVW\n",
-      "Line 49:FGAS.          : 31 Flag -Gas Index\n",
-      "Line 50:PIDX.          : 32 Prod Idx\n",
-      "Line 51:FBH .          : 33 Flag -Bad Hole\n",
-      "Line 52:FHCC.          : 34 Flag -HC Correction\n",
-      "Line 53:LSWB.          : 35 Flag -Limit SWB\n",
+      "Line 18:DEPT.M     : Depth\n",
+      "Line 19:DT  .US/M  : 1 Sonic Travel Time\n",
+      "Line 20:RHOB.K/M   : 2 Density-Bulk Density\n",
+      "Line 21:NPHI.V/V   : 3 Porosity -Neutron\n",
+      "Line 22:RX0 .OHMM  : 4 Resistivity -Rxo\n",
+      "Line 23:RESS.OHMM  : 5 Resistivity -Shallow\n",
+      "Line 24:RESM.OHMM  : 6 Resistivity -Medium\n",
+      "Line 25:RESD.OHMM  : 7 Resistivity -Deep\n",
+      "Line 26:SP  .MV    : 8 Spon. Potential\n",
+      "Line 27:GR  .GAPI  : 9 Gamma Ray\n",
+      "Line 28:CALI.MM    : 10 Caliper\n",
+      "Line 29:DRHO.K/M3  : 11 Delta-Rho\n",
+      "Line 30:EATT.DBM   : 12 EPT Attenuation\n",
+      "Line 31:TPL .NS/M  : 13 TP -EPT\n",
+      "Line 32:PEF .      : 14 PhotoElectric Factor\n",
+      "Line 33:FFI .V/V   : 15 Porosity -NML FFI\n",
+      "Line 34:DCAL.MM    : 16 Caliper-Differential\n",
+      "Line 35:RHGF.K/M3  : 17 Density-Formation\n",
+      "Line 36:RHGA.K/M3  : 18 Density-Apparent\n",
+      "Line 37:SPBL.MV    : 19 Baselined SP\n",
+      "Line 38:GRC .GAPI  : 20 Gamma Ray BHC\n",
+      "Line 39:PHIA.V/V   : 21 Porosity -Apparent\n",
+      "Line 40:PHID.V/V   : 22 Porosity -Density\n",
+      "Line 41:PHIE.V/V   : 23 Porosity -Effective\n",
+      "Line 42:PHIN.V/V   : 24 Porosity -Neut BHC\n",
+      "Line 43:PHIC.V/V   : 25 Porosity -Total HCC\n",
+      "Line 44:R0  .OHMM  : 26 Ro\n",
+      "Line 45:RWA .OHMM  : 27 Rfa\n",
+      "Line 46:SW  .      : 28 Sw -Effective\n",
+      "Line 47:MSI .      : 29 Sh Idx -Min\n",
+      "Line 48:BVW .      : 30 BVW\n",
+      "Line 49:FGAS.      : 31 Flag -Gas Index\n",
+      "Line 50:PIDX.      : 32 Prod Idx\n",
+      "Line 51:FBH .      : 33 Flag -Bad Hole\n",
+      "Line 52:FHCC.      : 34 Flag -HC Correction\n",
+      "Line 53:LSWB.      : 35 Flag -Limit SWB\n",
       "Line 54:~Params ----------------------------------------------------\n",
       "Line 55:~Other -----------------------------------------------------\n",
       "Line 56:~ASCII -----------------------------------------------------\n",
-      "Line 57:  910.00000    -999.25 2692.70750    0.31400   19.40860   19.40860   13.17090\n",
-      "Line 58:12.26810   -1.50100   96.53060  204.71770   30.58220    -999.25    -999.25\n",
-      "Line 59:3.25150    -999.25    4.71770 3025.02640 3025.02640   -1.50100   93.13780\n",
-      "Line 60:0.16410    0.01010    0.16410    0.31400    0.16410   11.13970    0.33040\n",
-      "Line 61:0.95290    0.00000    0.15640    0.00000   11.13970    0.00000    0.00000\n",
-      "Line 62:0.00000\n",
-      "Line 63:  909.87500    -999.25 2712.64600    0.28860   23.39870   23.39870   13.61290\n",
-      "Line 64:12.47440   -1.47200   90.28030  203.10930   18.75660    -999.25    -999.25\n",
-      "Line 65:3.70580    -999.25    3.10930 3004.60500 3004.60500   -1.47200   86.90780\n",
-      "Line 66:0.14560   -0.00150    0.14560    0.28860    0.14560   14.14280    0.26460\n",
-      "Line 67:1.00000    0.00000    0.14560    0.00000   14.14280    0.00000    0.00000\n",
-      "Line 68:0.00000\n",
-      "Line 69:  909.75000    -999.25 2692.81370    0.27300   22.59090   22.59090   13.68210\n",
-      "Line 70:12.61460   -1.48040   89.84920  201.92870    3.15510    -999.25    -999.25\n",
-      "Line 71:4.31240    -999.25    1.92870 2976.44510 2976.44510   -1.48040   86.34650\n",
-      "Line 72:0.14350    0.01010    0.14350    0.27300    0.14350   14.56740    0.25980\n",
-      "Line 73:1.00000    0.00000    0.14350    0.00000   14.56740    0.00000    0.00000\n",
-      "Line 74:0.00000\n",
-      "Line 75:  909.62500    -999.25 2644.36500    0.27650   18.48310   18.48310   13.41590\n",
-      "Line 76:12.69000   -1.50100   93.39990  201.58260   -6.58610    -999.25    -999.25\n",
-      "Line 77:4.38220    -999.25    1.58260 2955.35280 2955.35280   -1.50100   89.71420\n",
-      "Line 78:0.15900    0.03840    0.15900    0.27650    0.15900   11.86000    0.32100\n",
-      "Line 79:0.96670    0.00000    0.15380    0.00000   11.86000    0.00000    0.00000\n",
-      "Line 80:0.00000\n",
-      "Line 81:  909.50000    -999.25 2586.28220    0.29960   13.91870   13.91870   12.91950\n",
-      "Line 82:12.70160   -1.49160   98.12140  201.71260   -4.55740    -999.25    -999.25\n",
-      "Line 83:3.59670    -999.25    1.71260 2953.59400 2953.59400   -1.49160   94.26700\n",
-      "Line 84:0.18800    0.07230    0.18800    0.29960    0.18800    8.48630    0.44900\n",
-      "Line 85:0.81740    0.00000    0.15370    0.00000    8.48630    0.00000    0.00000\n",
-      "Line 86:0.00000\n"
+      "Line 57:  910.00000    -999.25 2692.70750    0.31400   19.40860   19.40860   13.17090   12.26810   -1.50100   96.53060  204.71770   30.58220    -999.25    -999.25    3.25150    -999.25    4.71770 3025.02640 3025.02640   -1.50100   93.13780    0.16410    0.01010    0.16410    0.31400    0.16410   11.13970    0.33040    0.95290    0.00000    0.15640    0.00000   11.13970    0.00000    0.00000    0.00000\n",
+      "Line 58:  909.87500    -999.25 2712.64600    0.28860   23.39870   23.39870   13.61290   12.47440   -1.47200   90.28030  203.10930   18.75660    -999.25    -999.25    3.70580    -999.25    3.10930 3004.60500 3004.60500   -1.47200   86.90780    0.14560   -0.00150    0.14560    0.28860    0.14560   14.14280    0.26460    1.00000    0.00000    0.14560    0.00000   14.14280    0.00000    0.00000    0.00000\n",
+      "Line 59:  909.75000    -999.25 2692.81370    0.27300   22.59090   22.59090   13.68210   12.61460   -1.48040   89.84920  201.92870    3.15510    -999.25    -999.25    4.31240    -999.25    1.92870 2976.44510 2976.44510   -1.48040   86.34650    0.14350    0.01010    0.14350    0.27300    0.14350   14.56740    0.25980    1.00000    0.00000    0.14350    0.00000   14.56740    0.00000    0.00000    0.00000\n",
+      "Line 60:  909.62500    -999.25 2644.36500    0.27650   18.48310   18.48310   13.41590   12.69000   -1.50100   93.39990  201.58260   -6.58610    -999.25    -999.25    4.38220    -999.25    1.58260 2955.35280 2955.35280   -1.50100   89.71420    0.15900    0.03840    0.15900    0.27650    0.15900   11.86000    0.32100    0.96670    0.00000    0.15380    0.00000   11.86000    0.00000    0.00000    0.00000\n",
+      "Line 61:  909.50000    -999.25 2586.28220    0.29960   13.91870   13.91870   12.91950   12.70160   -1.49160   98.12140  201.71260   -4.55740    -999.25    -999.25    3.59670    -999.25    1.71260 2953.59400 2953.59400   -1.49160   94.26700    0.18800    0.07230    0.18800    0.29960    0.18800    8.48630    0.44900    0.81740    0.00000    0.15370    0.00000    8.48630    0.00000    0.00000    0.00000\n"
      ]
     }
    ],
@@ -262,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -271,62 +246,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HeaderItem(mnemonic='WRAP', unit='', value='NO', descr='Multiple lines per depth step')\n",
+      "HeaderItem(mnemonic=WRAP, unit=, value=NO, descr=Multiple lines per depth step, original_mnemonic=WRAP)\n",
       "\n",
       "Line 0:~Version ---------------------------------------------------\n",
-      "Line 1:VERS.     2.0 : CWLS log ASCII Standard -VERSION 2.0\n",
-      "Line 2:WRAP.      NO : Multiple lines per depth step\n",
+      "Line 1:VERS. 2.0 : CWLS log ASCII Standard -VERSION 2.0\n",
+      "Line 2:WRAP.  NO : Multiple lines per depth step\n",
       "Line 3:~Well ------------------------------------------------------\n",
-      "Line 4:STRT.M                       910.0 : \n",
-      "Line 5:STOP.M                       909.5 : \n",
-      "Line 6:STEP.M                      -0.125 : \n",
-      "Line 7:NULL.                      -999.25 : Null value\n",
-      "Line 8:COMP.         ANY OIL COMPANY INC. : COMPANY\n",
-      "Line 9:WELL.        ANY ET AL XX-XX-XX-XX : WELL\n",
-      "Line 10:FLD .                      WILDCAT : FIELD\n",
-      "Line 11:LOC .               XX-XX-XX-XXW3M : LOCATION\n",
-      "Line 12:PROV.                 SASKATCHEWAN : PROVINCE\n",
-      "Line 13:SRVC.     ANY LOGGING COMPANY INC. : SERVICE COMPANY\n",
-      "Line 14:SON .                       142085 : SERVICE ORDER\n",
-      "Line 15:DATE.                    13-DEC-86 : LOG DATE\n",
-      "Line 16:UWI .                              : UNIQUE WELL ID\n",
+      "Line 4:STRT.M                   910.0 : \n",
+      "Line 5:STOP.M                   909.5 : \n",
+      "Line 6:STEP.M                  -0.125 : \n",
+      "Line 7:NULL.                  -999.25 : Null value\n",
+      "Line 8:COMP.     ANY OIL COMPANY INC. : COMPANY\n",
+      "Line 9:WELL.    ANY ET AL XX-XX-XX-XX : WELL\n",
+      "Line 10:FLD .                  WILDCAT : FIELD\n",
+      "Line 11:LOC .           XX-XX-XX-XXW3M : LOCATION\n",
+      "Line 12:PROV.             SASKATCHEWAN : PROVINCE\n",
+      "Line 13:SRVC. ANY LOGGING COMPANY INC. : SERVICE COMPANY\n",
+      "Line 14:SON .                   142085 : SERVICE ORDER\n",
+      "Line 15:DATE.                13-DEC-86 : LOG DATE\n",
+      "Line 16:UWI .                          : UNIQUE WELL ID\n",
       "Line 17:~Curves ----------------------------------------------------\n",
-      "Line 18:DEPT.M         : Depth\n",
-      "Line 19:DT  .US/M      : 1 Sonic Travel Time\n",
-      "Line 20:RHOB.K/M       : 2 Density-Bulk Density\n",
-      "Line 21:NPHI.V/V       : 3 Porosity -Neutron\n",
-      "Line 22:RX0 .OHMM      : 4 Resistivity -Rxo\n",
-      "Line 23:RESS.OHMM      : 5 Resistivity -Shallow\n",
-      "Line 24:RESM.OHMM      : 6 Resistivity -Medium\n",
-      "Line 25:RESD.OHMM      : 7 Resistivity -Deep\n",
-      "Line 26:SP  .MV        : 8 Spon. Potential\n",
-      "Line 27:GR  .GAPI      : 9 Gamma Ray\n",
-      "Line 28:CALI.MM        : 10 Caliper\n",
-      "Line 29:DRHO.K/M3      : 11 Delta-Rho\n",
-      "Line 30:EATT.DBM       : 12 EPT Attenuation\n",
-      "Line 31:TPL .NS/M      : 13 TP -EPT\n",
-      "Line 32:PEF .          : 14 PhotoElectric Factor\n",
-      "Line 33:FFI .V/V       : 15 Porosity -NML FFI\n",
-      "Line 34:DCAL.MM        : 16 Caliper-Differential\n",
-      "Line 35:RHGF.K/M3      : 17 Density-Formation\n",
-      "Line 36:RHGA.K/M3      : 18 Density-Apparent\n",
-      "Line 37:SPBL.MV        : 19 Baselined SP\n",
-      "Line 38:GRC .GAPI      : 20 Gamma Ray BHC\n",
-      "Line 39:PHIA.V/V       : 21 Porosity -Apparent\n",
-      "Line 40:PHID.V/V       : 22 Porosity -Density\n",
-      "Line 41:PHIE.V/V       : 23 Porosity -Effective\n",
-      "Line 42:PHIN.V/V       : 24 Porosity -Neut BHC\n",
-      "Line 43:PHIC.V/V       : 25 Porosity -Total HCC\n",
-      "Line 44:R0  .OHMM      : 26 Ro\n",
-      "Line 45:RWA .OHMM      : 27 Rfa\n",
-      "Line 46:SW  .          : 28 Sw -Effective\n",
-      "Line 47:MSI .          : 29 Sh Idx -Min\n",
-      "Line 48:BVW .          : 30 BVW\n",
-      "Line 49:FGAS.          : 31 Flag -Gas Index\n",
-      "Line 50:PIDX.          : 32 Prod Idx\n",
-      "Line 51:FBH .          : 33 Flag -Bad Hole\n",
-      "Line 52:FHCC.          : 34 Flag -HC Correction\n",
-      "Line 53:LSWB.          : 35 Flag -Limit SWB\n",
+      "Line 18:DEPT.M     : Depth\n",
+      "Line 19:DT  .US/M  : 1 Sonic Travel Time\n",
+      "Line 20:RHOB.K/M   : 2 Density-Bulk Density\n",
+      "Line 21:NPHI.V/V   : 3 Porosity -Neutron\n",
+      "Line 22:RX0 .OHMM  : 4 Resistivity -Rxo\n",
+      "Line 23:RESS.OHMM  : 5 Resistivity -Shallow\n",
+      "Line 24:RESM.OHMM  : 6 Resistivity -Medium\n",
+      "Line 25:RESD.OHMM  : 7 Resistivity -Deep\n",
+      "Line 26:SP  .MV    : 8 Spon. Potential\n",
+      "Line 27:GR  .GAPI  : 9 Gamma Ray\n",
+      "Line 28:CALI.MM    : 10 Caliper\n",
+      "Line 29:DRHO.K/M3  : 11 Delta-Rho\n",
+      "Line 30:EATT.DBM   : 12 EPT Attenuation\n",
+      "Line 31:TPL .NS/M  : 13 TP -EPT\n",
+      "Line 32:PEF .      : 14 PhotoElectric Factor\n",
+      "Line 33:FFI .V/V   : 15 Porosity -NML FFI\n",
+      "Line 34:DCAL.MM    : 16 Caliper-Differential\n",
+      "Line 35:RHGF.K/M3  : 17 Density-Formation\n",
+      "Line 36:RHGA.K/M3  : 18 Density-Apparent\n",
+      "Line 37:SPBL.MV    : 19 Baselined SP\n",
+      "Line 38:GRC .GAPI  : 20 Gamma Ray BHC\n",
+      "Line 39:PHIA.V/V   : 21 Porosity -Apparent\n",
+      "Line 40:PHID.V/V   : 22 Porosity -Density\n",
+      "Line 41:PHIE.V/V   : 23 Porosity -Effective\n",
+      "Line 42:PHIN.V/V   : 24 Porosity -Neut BHC\n",
+      "Line 43:PHIC.V/V   : 25 Porosity -Total HCC\n",
+      "Line 44:R0  .OHMM  : 26 Ro\n",
+      "Line 45:RWA .OHMM  : 27 Rfa\n",
+      "Line 46:SW  .      : 28 Sw -Effective\n",
+      "Line 47:MSI .      : 29 Sh Idx -Min\n",
+      "Line 48:BVW .      : 30 BVW\n",
+      "Line 49:FGAS.      : 31 Flag -Gas Index\n",
+      "Line 50:PIDX.      : 32 Prod Idx\n",
+      "Line 51:FBH .      : 33 Flag -Bad Hole\n",
+      "Line 52:FHCC.      : 34 Flag -HC Correction\n",
+      "Line 53:LSWB.      : 35 Flag -Limit SWB\n",
       "Line 54:~Params ----------------------------------------------------\n",
       "Line 55:~Other -----------------------------------------------------\n",
       "Line 56:~ASCII -----------------------------------------------------\n",
@@ -356,6 +331,24 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -374,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
