--- a/notebooks/using lasio with pandas DataFrame.ipynb
+++ b/notebooks/using lasio with pandas DataFrame.ipynb
@@ -34,14 +34,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If [pandas](http://pandas.pydata.org/) is installed, lasio will automatically create a pandas DataFrame attribute for the las object.  \n",
-    "\n",
-    "It's a fully functional pandas [DataFrame](http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dataframe) object:"
+    "If [pandas](http://pandas.pydata.org/) is installed, you can use the df() method to get a pandas [DataFrame](http://pandas.pydata.org/pandas-docs/stable/dsintro.html#dataframe) version of the data section:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = l.df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -52,13 +61,13 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(l.df)"
+    "type(df)"
    ]
   },
   {
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -234,13 +243,13 @@
        "0.50  49.765  4.587  3.382 -2324.28   NaN  115.508 -3.049 -116.998"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.df.head(10)"
+    "df.head(10)"
    ]
   },
   {
@@ -252,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -896,13 +905,13 @@
        "136.60  -56.275    NaN    NaN      NaN      NaN      NaN    NaN      NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.df.tail(50)"
+    "df.tail(50)"
    ]
   },
   {
@@ -914,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1052,13 +1061,13 @@
        "max    50499.900000   102.902000  4978.160000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.df.describe()"
+    "df.describe()"
    ]
   },
   {
@@ -1070,18 +1079,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "l.df['RES'] = 1000 / l.df.COND"
+    "df['RES'] = 1000 / df.COND"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -1284,13 +1293,13 @@
        "100.50  3.044789  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.df[100:100.5]"
+    "df[100:100.5]"
    ]
   },
   {
@@ -1302,13 +1311,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "l.df.index = l.df.index / 0.3048"
+    "df.index = df.index / 0.3048"
    ]
   },
   {
@@ -1320,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1789,13 +1798,13 @@
        "445.866142       NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.df[441:446]"
+    "df[441:446]"
    ]
   },
   {
@@ -1809,13 +1818,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "l.df.index *= 0.3048"
+    "df.index *= 0.3048"
    ]
   },
   {
@@ -1827,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -2003,13 +2012,13 @@
        "136.60 -56.275   NaN    NaN   NaN   NaN NaN NaN   NaN  NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.df.iloc[-10:]"
+    "df.iloc[-10:]"
    ]
   },
   {
@@ -2038,7 +2047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
