--- a/notebooks/set logging level for lasio.ipynb
+++ b/notebooks/set logging level for lasio.ipynb
@@ -121,7 +121,7 @@
       "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
       "DEBUG:lasio.reader:using null policy of \"common\"\n",
       "DEBUG:lasio.reader:adding substitution NULL\n",
-      "DEBUG:lasio.reader:located substition for LAS.version.NULL as True\n",
+      "DEBUG:lasio.reader:located substitution for LAS.version.NULL as True\n",
       "DEBUG:lasio.reader:adding substitution (null)\n",
       "DEBUG:lasio.reader:adding substitution -\n",
       "DEBUG:lasio.reader:adding substitution 9999.25\n",
