Add simple memory profile code

--- a/notebooks/Speed test.ipynb
+++ b/notebooks/Speed test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ordinary-adapter",
+   "execution_count": 9,
+   "id": "graduate-mathematics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,29 +11,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "central-giving",
+   "metadata": {},
+   "source": [
+    "# Speed"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "tropical-essex",
+   "execution_count": 10,
+   "id": "varied-mambo",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "416 ms ± 76.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "216 ms ± 30.4 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit \n",
+    "%%timeit  -n 15\n",
     "\n",
     "lasio.examples.open(\"6038187_v1.2.las\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "republican-yesterday",
+   "metadata": {},
+   "source": [
+    "prior to trying to fix #217:        6038187_v1.2.las = 321 ms ± 34.8 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)\n",
+    "read-quoted-strings branch:         6038187_v1.2.las = 216 ms ± 37.9 ms per loop (mean ± std. dev. of 7 runs, 15 loops each)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "romantic-ontario",
+   "metadata": {},
+   "source": [
+    "# Memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "hollywood-lucas",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "consistent-voltage",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4192151"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "las = lasio.examples.open(\"logging_levels.las\")\n",
+    "len(pickle.dumps(las))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "musical-sacramento",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "198983"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "las = lasio.examples.open(\"6038187_v1.2.las\")\n",
+    "len(pickle.dumps(las))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "distinct-omaha",
+   "id": "horizontal-bathroom",
    "metadata": {},
    "outputs": [],
    "source": []
